fix whitespace

--- a/src/systems/ec/implementations/vanilla/packages/ec-component-form-form-group/ec-component-form-form-group.scss
+++ b/src/systems/ec/implementations/vanilla/packages/ec-component-form-form-group/ec-component-form-form-group.scss
@@ -12,7 +12,7 @@
     display: block;
     margin: 0;
 
-    > * + * {
+    > *:not([hidden]) + * {
       margin-top: $ecl-spacing-s;
     }
 
